--- a/src/app/components/finanzas/dialogs/dialog-treasury-detail/dialog-treasury-detail.component.html
+++ b/src/app/components/finanzas/dialogs/dialog-treasury-detail/dialog-treasury-detail.component.html
@@ -42,7 +42,7 @@
             <mat-select (selectionChange)="periodChanged($event.value)">
               <mat-option value="all">Todos</mat-option>
               <mat-option value="m1">Último mes</mat-option>
-              <mat-option value="m3">Últimos 3 meses</mat-option>
+              <mat-option value="m3">Mes anterior</mat-option>
               <mat-option value="y1">Último año</mat-option>
             </mat-select>
           </mat-form-field>
